@@ -1,3 +1,3 @@
-#Comment out to disable unit tests at R CMD check
-library(testthat)
-test_check("RAppArmor")
+# Comment out to disable unit tests at R CMD check
+# library(testthat)
+# test_check("RAppArmor")
